Update to image animation

--- a/nuevo-tango.html
+++ b/nuevo-tango.html
@@ -108,7 +108,7 @@
 			<p>April 16, 2023 | 6-9:30pm</p>
 			<h3>WHERE</h3>
 			<p>Fourth United Presbyterian Church<br>1323 N. Broadway, Knoxville, TN 37917</p>
-			<span class="icon animate-this"><img src="images/tango-trio.png"></i></span>
+			<span class="icon"><img src="images/tango-trio.png"></i></span>
 		</div>
 		<div class="col-eight event-info">
 			<p>
