--- a/events.html
+++ b/events.html
@@ -77,7 +77,7 @@
 
 			<ul class="header-social-list">
 	         <li>
-	         	<a href="#"><i class="fa fa-facebook-square"></i></a>
+	         	<a href="https://www.facebook.com/transformanceart" target="_blank"><i class="fa fa-facebook-square"></i></a>
 	         </li>
 	         <li>
 	         	<a href="#"><i class="fa fa-instagram"></i></a>
@@ -199,7 +199,7 @@
 			<div class="container">
 				<ul class="contact-social-list">
 					<li>
-						<a href="#"><i class="fa fa-facebook-square"></i></a>
+						<a href="https://www.facebook.com/transformanceart" target="_blank"><i class="fa fa-facebook-square"></i></a>
 					</li>
 					<li>
 						<a href="#"><i class="fa fa-instagram"></i></a>
