Clean url endings

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
    <header> 
 
    	<div class="header-logo">
-	      <a href="index.html"><img src="images/logo-full-light.png"></a>
+	      <a href="/"><img src="images/logo-full-light.png"></a>
 	   </div> 
 
 		<a id="header-menu-trigger" href="#0">
@@ -69,9 +69,9 @@
 	   	<h3><img src="images/logo.png"></h3>  
 
 			<ul class="nav-list">
-				<li><a href="index.html" title="Home">Home</a></li>
-				<li><a class="current" href="about.html" title="About">About</a></li>
-				<li><a href="events.html" title="Events">Events</a></li>
+				<li><a href="/" title="Home">Home</a></li>
+				<li><a class="current" href="about" title="About">About</a></li>
+				<li><a href="events" title="Events">Events</a></li>
 				<li><a class="smoothscroll" href="#connect" title="Connect">Connect</a></li>						
 			</ul>
 
