--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    <header> 
 
    	<div class="header-logo">
-	      <a href="index.html"><img src="images/logo-full-light.png"></a>
+	      <a href="/"><img src="images/logo-full-light.png"></a>
 	   </div> 
 
 		<a id="header-menu-trigger" href="#0">
@@ -69,9 +69,9 @@
 	   	<h3><img src="images/logo.png"></h3>  
 
 			<ul class="nav-list">
-				<li class="current"><a href="index.html" title="Home">Home</a></li>
-				<li><a href="about.html" title="About">About</a></li>
-				<li><a href="events.html" title="Events">Events</a></li>
+				<li class="current"><a href="/" title="Home">Home</a></li>
+				<li><a href="about" title="About">About</a></li>
+				<li><a href="events" title="Events">Events</a></li>
 				<li><a class="smoothscroll" href="#connect" title="Connect">Connect</a></li>						
 			</ul>
 
@@ -106,7 +106,7 @@
 					<p class="animate-intro">Celebrating the tango-inspired works of Piazzolla.</p>
 					<p class="animate-intro">April 16, 2023 | 6-9:30pm</p>
 					<div class="more animate-intro">
-						<a class="button stroke" href="nuevo-tango.html">
+						<a class="button stroke" href="nuevo-tango">
 							Learn More
 						</a>
 						<a class="button yellowbtn" href="#">
@@ -153,7 +153,7 @@
 					<h2 class="animate-this">Who We Are</h2>
 	   			<p class="lead animate-this"><span>Transformance Art</span> is a group of performing artists who have a passion for merging art forms to create innovative experiences. Our aim is to work through art to engage people in ways that will inspire them and lift their spirits.</p>	
 				</div>   
-				<a class="button stroke animate-this" href="about.html">
+				<a class="button stroke animate-this" href="about">
 					Read More
 				</a>
 
@@ -199,7 +199,7 @@
 
 		            <p>Join us for a celebration of the Tango-inspired compositions of the exceptional Argentinian composer, Astor Piazzolla. Immerse yourself in an evening of beautiful Chamber Music, Tango dances accompanied by live music, and a Social Dance Party. This is truly a one-of-a-kind Chamber Music concert, where two art forms collide to create an experience unlike any other.</p> 
 					<div class="more animate-intro fadeInUp animated">
-						<a class="button yellowbtn" href="nuevo-tango.html">
+						<a class="button yellowbtn" href="nuevo-tango">
 							Full Event Details
 						</a>
 					</div>		
@@ -231,7 +231,7 @@
 			<div class="response" id="mce-error-response" style="display:none"></div>
 			<div class="response" id="mce-success-response" style="display:none"></div>
 		</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0378b86af0fd07d784e29a7a6_a37110126e" tabindex="-1" value=""></div>
+		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0378b86af0fd07d784e29a7a6_a37110126e" tab/="-1" value=""></div>
 			<div class="optionalParent">
 				<div class="clear foot">
 					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button stroke whitebtn">
