--- a/events.html
+++ b/events.html
@@ -54,7 +54,7 @@
    <header> 
 
    	<div class="header-logo">
-	      <a href="index.html"><img src="images/logo-full-light.png"></a>
+	      <a href="/"><img src="images/logo-full-light.png"></a>
 	   </div> 
 
 		<a id="header-menu-trigger" href="#0">
@@ -69,9 +69,9 @@
 	   	<h3><img src="images/logo.png"></h3>  
 
 			<ul class="nav-list">
-				<li><a href="index.html" title="Home">Home</a></li>
-				<li><a href="about.html" title="About">About</a></li>
-				<li class="current"><a href="events.html" title="Events">Events</a></li>
+				<li><a href="/" title="Home">Home</a></li>
+				<li><a href="about" title="About">About</a></li>
+				<li class="current"><a href="events" title="Events">Events</a></li>
 				<li><a class="smoothscroll" href="#connect" title="Connect">Connect</a></li>						
 			</ul>
 
@@ -121,7 +121,7 @@
 
 		            <p>Join us for a celebration of the Tango-inspired compositions of the exceptional Argentinian composer, Astor Piazzolla. Immerse yourself in an evening of beautiful Chamber Music, Tango dances accompanied by live music, and a Social Dance Party. This is truly a one-of-a-kind Chamber Music concert, where two art forms collide to create an experience unlike any other.</p> 
 					<div class="more animate-intro fadeInUp animated">
-						<a class="button yellowbtn" href="nuevo-tango.html">
+						<a class="button yellowbtn" href="nuevo-tango">
 							Full Event Details
 						</a>
 					</div>		
@@ -153,7 +153,7 @@
 			<div class="response" id="mce-error-response" style="display:none"></div>
 			<div class="response" id="mce-success-response" style="display:none"></div>
 		</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0378b86af0fd07d784e29a7a6_a37110126e" tabindex="-1" value=""></div>
+		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0378b86af0fd07d784e29a7a6_a37110126e" tab/="-1" value=""></div>
 			<div class="optionalParent">
 				<div class="clear foot">
 					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button stroke whitebtn">
