Add link to instagram

--- a/events.html
+++ b/events.html
@@ -80,7 +80,7 @@
 	         	<a href="https://www.facebook.com/transformanceart" target="_blank"><i class="fa fa-facebook-square"></i></a>
 	         </li>
 	         <li>
-	         	<a href="#"><i class="fa fa-instagram"></i></a>
+	         	<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
 	         </li>    
 	      </ul>		
 
@@ -202,7 +202,7 @@
 						<a href="https://www.facebook.com/transformanceart" target="_blank"><i class="fa fa-facebook-square"></i></a>
 					</li>
 					<li>
-						<a href="#"><i class="fa fa-instagram"></i></a>
+						<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
 					</li>    
 				 </ul>
 			</div>
