--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	         	<a href="https://www.facebook.com/transformanceart" target="_blank"><i class="fa fa-facebook-square"></i></a>
 	         </li>
 	         <li>
-	         	<a href="#"><i class="fa fa-instagram"></i></a>
+	         	<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
 	         </li>    
 	      </ul>		
 
@@ -126,7 +126,7 @@
 	        	<a href="https://www.facebook.com/transformanceart" target="_blank"><i class="fa fa-facebook-square"></i></a>
 	      </li>
 	      <li class="animate-intro">
-	        	<a href="#"><i class="fa fa-instagram"></i></a>
+	        	<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
 	      </li>  
 	   </ul> <!-- end home-social-list -->	
 
@@ -280,7 +280,7 @@
 						<a href="https://www.facebook.com/transformanceart" target="_blank"><i class="fa fa-facebook-square"></i></a>
 					</li>
 					<li>
-						<a href="#"><i class="fa fa-instagram"></i></a>
+						<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
 					</li>    
 				 </ul>
 			</div>
