--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<a class="button stroke" href="nuevo-tango">
 							Learn More
 						</a>
-						<a class="button yellowbtn" href="#">
+						<a class="button yellowbtn" href="https://www.eventbrite.com/e/nuevo-tango-celebrating-the-tango-inspired-works-of-piazzolla-tickets-556355061967">
 							Buy Tickets
 						</a>
 					</div>							
