--- a/nuevo-tango.html
+++ b/nuevo-tango.html
@@ -93,7 +93,7 @@
    		<div class="col-full">
    			
    				<h2 class="animate-this">Nuevo Tango</h2>
-				   <a class="button yellowbtn" href="#">
+				   <a class="button yellowbtn" href="https://www.eventbrite.com/e/nuevo-tango-celebrating-the-tango-inspired-works-of-piazzolla-tickets-556355061967">
 					Buy Tickets
 				</a>
    			
