--- a/nuevo-tango.html
+++ b/nuevo-tango.html
@@ -127,7 +127,7 @@
 			<p>KnoxTrio (Joshua Ulrich: Violin, Sarah Senn: Cello and Belle Toh: Piano) will perform Bordel 1900, Cafe 1930, Nightclub 1960, Escualo, Oblivion, Libertango and Four Seasons of Buenos Aires.</p>
 			<h3>Dance</h3>
 			<p>Kris Hazard and Natalie Thompson will perform a tango fusion to Escualo and Libertango.</p>
-			<p><a href="http://www.knoxvilletango.org/" target="_blank">Argentine Tango Society</a> (Juan Luis and Sodeya Bernard) will improvise an Argentine Tango to Oblivion.</p>
+			<p><a href="http://www.knoxvilletango.org/" target="_blank">Argentine Tango Society</a> will improvise an Argentine Tango to Oblivion.</p>
 			<h3>Social Dance Party</h3>
 			<p>Juan Luis will teach a short Argentine Tango lesson.</p>
 			<p>The social dance party will be hosted by <a href="https://www.marblecityballroom.com/" target="_blank">Marble City Ballroom</a>.</p>
