--- a/nuevo-tango.html
+++ b/nuevo-tango.html
@@ -129,7 +129,7 @@
 			<p>Kris Hazard and Natalie Thompson will perform a tango fusion to Escualo and Libertango.</p>
 			<p><a href="http://www.knoxvilletango.org/" target="_blank">Argentine Tango Society</a> will improvise an Argentine Tango to Oblivion.</p>
 			<h3>Social Dance Party</h3>
-			<p>Juan Luis will teach a short Argentine Tango lesson.</p>
+			<p>Argentine Tango Society will teach a short Argentine Tango lesson.</p>
 			<p>The social dance party will be hosted by <a href="https://www.marblecityballroom.com/" target="_blank">Marble City Ballroom</a>.</p>
 		</div>
    		
