--- a/events.html
+++ b/events.html
@@ -16,7 +16,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Transformance Art</title>
+	<title>Transformance Art | Events</title>
 	<meta name="description" content="Transformance Art is a group of performing artists who have a passion for merging art forms to create innovative experiences. Our aim is to work through art to engage people in ways that will inspire them and lift their spirits.">  
 
    <!-- mobile specific metas
