Update event description text

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						Nuevo Tango
 					</h1>
 					<hr>
-					<p class="animate-intro">Celebrating the tango-inspired works of Piazzolla.</p>
+					<p class="animate-intro">Celebrating the tango-inspired works of Astor Piazzolla.</p>
 					<p class="animate-intro">April 16, 2023 | 6-9:30pm</p>
 					<div class="more animate-intro">
 						<a class="button stroke" href="nuevo-tango">
