--- a/nuevo-tango.html
+++ b/nuevo-tango.html
@@ -117,6 +117,7 @@
 			<p>April 16, 2023 | 6-9:30pm</p>
 			<h3>WHERE</h3>
 			<p>Fourth United Presbyterian Church<br>1323 N. Broadway, Knoxville, TN 37917</p>
+			<p><i class="fa fa-info-circle"></i>&nbsp;Proceeds support Transformance Art in projects that will bring the healing and therapeutic benefits of the arts to people in our community who need it.</p>
 			<span class="icon"><img src="images/tango-trio.png"></i></span>
 		</div>
 		<div class="col-eight event-info">
