--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 				<div class="intro">
 					<h2 class="animate-this">Who We Are</h2>
-	   			<p class="lead animate-this"><span>Transformance Art</span> is a group of performing artists who have a passion for merging art forms to create innovative experiences. Our aim is to work through art to engage people in ways that will inspire them and lift their spirits.</p>	
+	   			<p class="lead animate-this"><span>Transformance Art</span> engages people in ways that will inspire them and lift their spirits. Rejuvenating the souls of professional artists by supporting creative and innovative ideas while bringing the healing and therapeutic benefits of the arts to people in our community who need it.</p>	
 				</div>   
 				<a class="button stroke animate-this" href="about">
 					Read More
