About page update

--- a/about.html
+++ b/about.html
@@ -110,8 +110,22 @@
 
 				<div class="intro">
 					<h2 class="animate-this">Who We Are</h2>
-	   				<p class="lead animate-this"><span>Mission: Performance that Transforms</span><br>Transformance Art is an organization dedicated to produce exceptional non-traditional classical chamber concerts where professional musicians, dancers, and visual artists work together by merging two or more forms of art to communicate sounds, movements and visuals in new and creative ways.</p>	
-					<p class="lead animate-this"><span>Vision</span><br>Our vision is to uplift, inspire and restore the community through excellent art that is presented in a way that the viewer’s are involved in some way, and where artists are free to be creative with their skills and talents.</p>	
+					<div class="col-full">
+						<p class="lead animate-this"><span>Mission</span><br>Supporting transformational performing arts ideas.</p>	
+						<p class="lead animate-this"><span>Vision</span><br>To reignite the excitement and passion within professional artists by being an artist nexus that supports connection, innovation, and production of transformational performing art.</p>	
+					</div>
+	   				<div class="col-six">
+						<p class="lead animate-this"><span>What is "transformational performing art"?</span><br>The word we created for our name encapsulates the answer.</p>	
+						<p class="lead" style="margin-bottom: 0.5em; padding-top: 0; margin-top: 0;"><span style="font-size: 1em;">Transformance = Transformational + Performance</span>
+							<div class="container" style="color: white; text-align: left; padding: 1em; border: dashed 1px white;">
+								<p style="margin-bottom: 0;">transformance (adj.)
+								</p>
+								<p style="margin-bottom: 0;">
+									A performance that has a transformational impact on the viewer; a performance that 	has been transformed from the way it is traditionally presented.
+								</p>
+							</div>
+						</p>
+					</div>
 				</div>  
 
    		</div> <!-- end col-full  -->
