--- a/nuevo-tango.html
+++ b/nuevo-tango.html
@@ -125,12 +125,14 @@
 				Join us for a celebration of the Tango-inspired compositions of the exceptional Argentinian composer, Astor Piazzolla. Immerse yourself in an evening of beautiful Chamber Music, Tango dances accompanied by live music, and a Social Dance Party. This is truly a one-of-a-kind Chamber Music concert, where two art forms collide to create an experience unlike any other.
 			</p>
 			<h3>Chamber Music</h3>
-			<p>KnoxTrio (Joshua Ulrich: Violin, Sarah Senn: Cello and Belle Toh: Piano) will perform Bordel 1900, Cafe 1930, Nightclub 1960, Escualo, Oblivion, Libertango and Four Seasons of Buenos Aires.</p>
+			<p>KnoxTrio (Joshua Ulrich: Violin, Sarah Senn: Cello and Belle Toh: Piano) will perform Cafe 1930, Nightclub 1960, Escualo, Oblivion, Libertango and Four Seasons of Buenos Aires.</p>
 			<h3>Dance</h3>
-			<p>Kris Hazard and Natalie Thompson will perform a tango fusion to Escualo and Libertango.</p>
+			<p>Kris Hazard and Natalie Thompson will perform a tango fusion to Escualo.</p>
 			<p><a href="http://www.knoxvilletango.org/" target="_blank">Argentine Tango Society</a> will improvise an Argentine Tango to Oblivion.</p>
+			<p>Johnny and Jun Tang will perform an International Tango.</p>
+			<p>Johnny Tang and Belle Toh will perform an American Tango.</p>
 			<h3>Social Dance Party</h3>
-			<p>Argentine Tango Society will teach a short Argentine Tango lesson.</p>
+			<p>The Knoxville Argentine Tango Society will teach a short Argentine Tango lesson.</p>
 			<p>The social dance party will be hosted by <a href="https://www.marblecityballroom.com/" target="_blank">Marble City Ballroom</a>.</p>
 		</div>
    		
