--- a/nuevo-tango.html
+++ b/nuevo-tango.html
@@ -128,7 +128,7 @@
 			<p>KnoxTrio (Joshua Ulrich: Violin, Sarah Senn: Cello and Belle Toh: Piano) will perform Cafe 1930, Nightclub 1960, Escualo, Oblivion, Libertango and Four Seasons of Buenos Aires.</p>
 			<h3>Dance</h3>
 			<p>Kris Hazard and Natalie Thompson will perform a tango fusion to Escualo.</p>
-			<p><a href="http://www.knoxvilletango.org/" target="_blank">Argentine Tango Society</a> will improvise an Argentine Tango to Oblivion.</p>
+			<p>The <a href="http://www.knoxvilletango.org/" target="_blank">Knoxville Argentine Tango Society</a> will improvise an Argentine Tango to Oblivion.</p>
 			<p>Johnny and Jun Tang will perform an International Tango.</p>
 			<p>Johnny Tang and Belle Toh will perform an American Tango.</p>
 			<h3>Social Dance Party</h3>
