--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 						<a class="button stroke" href="nuevo-tango">
 							Learn More
 						</a>
-						<a class="button yellowbtn" href="https://www.eventbrite.com/e/nuevo-tango-celebrating-the-tango-inspired-works-of-piazzolla-tickets-556355061967">
-							Buy Tickets
+						<a class="button yellowbtn" href="/nuevo-tango-program">
+							Program
 						</a>
 					</div>							
 			  	</div>
@@ -240,7 +240,7 @@
 			<div class="response" id="mce-error-response" style="display:none"></div>
 			<div class="response" id="mce-success-response" style="display:none"></div>
 		</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0378b86af0fd07d784e29a7a6_a37110126e" tab/="-1" value=""></div>
+		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0378b86af0fd07d784e29a7a6_a37110126e" taborder="-1" value=""></div>
 			<div class="optionalParent">
 				<div class="clear foot">
 					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button stroke whitebtn">
