--- a/nuevo-tango.html
+++ b/nuevo-tango.html
@@ -102,8 +102,11 @@
    		<div class="col-full">
    			
    				<h2 class="animate-this">Nuevo Tango</h2>
-				   <a class="button yellowbtn" href="https://www.eventbrite.com/e/nuevo-tango-celebrating-the-tango-inspired-works-of-piazzolla-tickets-556355061967">
+				   <a class="button stroke whitebtn" href="https://www.eventbrite.com/e/nuevo-tango-celebrating-the-tango-inspired-works-of-piazzolla-tickets-556355061967">
 					Buy Tickets
+				</a>
+				   <a class="button yellowbtn" href="/nuevo-tango-program">
+					Program
 				</a>
    			
    	   </div> <!-- end col-full -->
