--- a/nuevo-tango-program.html
+++ b/nuevo-tango-program.html
@@ -189,7 +189,7 @@
 			</div>	
 		</div>
 		<div class="col-four">
-			<p style="color: black; text-align: right">arr. By Ikumi Nakayama</p>	  
+			<p style="color: black; text-align: right">arr. By Jose Bragato</p>	  
 		</div>
 		<div class="col-full">
 			<p style="color: black; margin-bottom: 0;"><span style="font-weight: bold;">International Tango to Game of Thrones</span></p>
