--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					</h1>
 					<hr>
 					<p class="animate-intro">Celebrating the tango-inspired works of Astor Piazzolla.</p>
-					<p class="animate-intro">April 16, 2023 | 6-9:30pm</p>
+					<p class="animate-intro fadeInUp animated">Thank you everyone for making this event a huge success!</p>
 					<div class="more animate-intro">
 						<a class="button stroke" href="nuevo-tango">
 							Learn More
