--- a/events.html
+++ b/events.html
@@ -90,7 +90,10 @@
 	         </li>
 	         <li>
 	         	<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
-	         </li>    
+	         </li>  
+			 <li>
+				<a href="https://youtube.com/@TransformanceArt"><i class="fa fa-youtube"></i></a>
+			 </li>  
 	      </ul>		
 
 		</nav>  <!-- end #menu-nav-wrap -->
@@ -213,6 +216,9 @@
 					<li>
 						<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
 					</li>    
+					<li>
+						<a href="https://youtube.com/@TransformanceArt"><i class="fa fa-youtube"></i></a>
+					</li>
 				 </ul>
 			</div>
 
