--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
 	         </li>
 	         <li>
 	         	<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
-	         </li>    
+	         </li>  
+			 <li>
+				<a href="https://youtube.com/@TransformanceArt"><i class="fa fa-youtube"></i></a>
+			 </li>  
 	      </ul>		
 
 		</nav>  <!-- end #menu-nav-wrap -->
@@ -137,6 +140,9 @@
 	      <li class="animate-intro">
 	        	<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
 	      </li>  
+		  <li class="animate-intro">
+			<a href="https://youtube.com/@TransformanceArt"><i class="fa fa-youtube"></i></a>
+	  </li>  
 	   </ul> <!-- end home-social-list -->	
 
 		<div class="scrolldown">
@@ -290,7 +296,10 @@
 					</li>
 					<li>
 						<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
-					</li>    
+					</li> 
+					<li>
+						<a href="https://youtube.com/@TransformanceArt"><i class="fa fa-youtube"></i></a>
+					</li>   
 				 </ul>
 			</div>
 
