--- a/nuevo-tango-program.html
+++ b/nuevo-tango-program.html
@@ -91,6 +91,9 @@
 	         <li>
 	         	<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
 	         </li>    
+			 <li>
+				<a href="https://youtube.com/@TransformanceArt"><i class="fa fa-youtube"></i></a>
+			 </li>
 	      </ul>		
 
 		</nav>  <!-- end #menu-nav-wrap -->
@@ -373,7 +376,10 @@
 					</li>
 					<li>
 						<a href="https://instagram.com/transformanceart"><i class="fa fa-instagram"></i></a>
-					</li>    
+					</li>   
+					<li>
+						<a href="https://youtube.com/@TransformanceArt"><i class="fa fa-youtube"></i></a>
+					</li> 
 				 </ul>
 			</div>
 
