Add GiveButter Script

--- a/about.html
+++ b/about.html
@@ -12,6 +12,11 @@
 
   gtag('config', 'G-37TFM1HMNT');
 </script>
+<script
+  async
+  src="https://widgets.givebutter.com/latest.umd.cjs?acct=iADcdCcoD9kE0QJm&p=other"
+></script>
+
 
    <!--- basic page needs
    ================================================== -->
