Add 501c3 to footer.

--- a/index.html
+++ b/index.html
@@ -325,8 +325,7 @@
 
       		<div class="col-twelve">
 	      		<div class="copyright">
-		         	<span>© Copyright Transformance Art 2024.</span> 
-		         	<span>Site managed by <a href="https://cryptasian.com" target="_blank">Cryptasian</a></span>	         	
+					<p>© Copyright Transformance Art 2024. All Rights Reserved. Transformance Art, Inc. is a 501(c)(3) nonprofit recognized by the IRS.<br>Site managed by <a href="https://cryptasian.com" target="_blank">Cryptasian</a></p>	         	
 		         </div>	
 						 
 						 
