--- a/connect.html
+++ b/connect.html
@@ -65,7 +65,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <a href="/"><img src="assets/img/logo-full-light.png" alt="" class="img-fluid"></a>
+        <a href="/"><img src="assets/img/logo-full-light.png" alt="Transformance Art" class="img-fluid"></a>
       </div>
 
       <nav id="navbar" class="navbar">
@@ -156,9 +156,9 @@
     <div class="container">
       <div class="copyright">
       <div class="social-links mb-3">
-        <a href="https://www.facebook.com/transformanceart" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://instagram.com/transformanceart" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://youtube.com/@TransformanceArt" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.facebook.com/transformanceart" target="_blank" class="facebook" aria-label="facebook"><i class="bx bxl-facebook" aria-hidden="true"></i></a>
+        <a href="https://instagram.com/transformanceart" target="_blank" class="instagram" aria-label="instagram"><i class="bx bxl-instagram" aria-hidden="true"></i></a>
+        <a href="https://youtube.com/@TransformanceArt" target="_blank" class="youtube" aria-label="youtube"><i class="bx bxl-youtube" aria-hidden="true"></i></a>
       </div>
         &copy; Copyright Transformance Art <script>document.write(new Date().getFullYear())</script>. All Rights Reserved. Transformance Art, Inc. is a 501(c)(3) nonprofit recognized by the IRS.
       </div>
