--- a/connect.html
+++ b/connect.html
@@ -96,7 +96,7 @@
         <div class="row">
 
           <div class="col-lg-12">
-            <form action="https://formspree.io/f/xayrgdpo" method="POST" role="form" class="email-form">
+            <form action="https://formspree.io/f/xayrgdpo" method="POST" class="email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
