Added aria-label for select on forms

--- a/connect.html
+++ b/connect.html
@@ -106,7 +106,7 @@
                 </div>
               </div>
               <div class="form-group mt-3">
-                <select class="form-control form-select" name="contactreason" id="contactreason" required="">
+                <select class="form-control form-select" name="contactreason" id="contactreason" required="" aria-label="Reason for Contact">
                   <option value="" selected="" disabled="">Select the Reason for Contact</option>
                   <option value="General Questions">General Questions</option>
                   <option value="Get Involved">Get Involved</option>
