Update meta description

--- a/connect.html
+++ b/connect.html
@@ -21,7 +21,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Transformance Art | Connect</title>
-	<meta name="description" content="Transformance Art is a group of performing artists who have a passion for merging art forms to create innovative experiences. Our aim is to work through art to engage people in ways that will inspire them and lift their spirits.">  
+	<meta name="description" content="Empowering innovative arts initiatives that promote hope, healing, and restoration, both individually and collectively, through the transformative power of performance arts experiences.">  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
