--- a/about.html
+++ b/about.html
@@ -127,6 +127,12 @@
               <div class="member-info">
                 <h4>Belle Toh</h4>
                 <span>Founder and President</span>
+                <p id="belle-bio" class="text-overflow-clamp">
+                  My journey has taken me across continents and cultures, cultivating a rich tapestry of musical mastery and innovative expression. With roots in esteemed institutions, a thirst for out-of-the-box ideas, and over four decades of experience, I've honed my craft - earning accolades and igniting passions along the way.<br><br>
+                  My experiences range from accompanying world-renowned vocalists and leading chamber ensembles to securing approval from the Chinese government to collaborate with a choir of Miao minority singers in staging Handel's Messiah at the Yunnan Minority Village, delivering a worship concert to an audience of over 3,000. I'm more than just a virtuoso pianist – I'm a multifaceted artist, dancer, and educator, dedicated to empowering others through the transformative power of art.<br><br>
+                  As the Founder and President of Transformance Art, my life is a testimony to the benefits of art, and I aim to share this with others through a vibrant hub where creative artists can connect and use their talents to uplift and inspire others. I want to see transformance artists build bridges through music and art and create a world where artistic expression will act as a powerful catalyst for personal and societal transformation.
+                </p>
+                <p><a id="belle-bio-btn" class="bio-btn">Read More</a></p>
               </div>
             </div>
           </div>
@@ -139,6 +145,10 @@
               <div class="member-info">
                 <h4>Ada Hernandez-Bell</h4>
                 <span>Secretary</span>
+                <p id="ada-bio" class="text-overflow-clamp">
+                  Ada brings two decades experience in non-profit administration with a special focus on trauma-informed relationships within child and family systems.  Currently, Ada serves as the Executive Director of the United Way of Anderson Co. In her free time, Ada is a proud 'boy mom', a lover of dance, art, and live music, and an avid community volunteer. Ada’s personal mission is to advocate for individuals in securing the resources they need to become who God truly intended for them to be. 
+                </p>
+                <p><a id="ada-bio-btn" class="bio-btn">Read More</a></p>
               </div>
             </div>
           </div>
@@ -151,6 +161,9 @@
               <div class="member-info">
                 <h4>Natalie Thompson</h4>
                 <span>Treasurer</span>
+                <p>
+                  Coming Soon
+                </p>
               </div>
             </div>
           </div>
@@ -161,8 +174,27 @@
                 <img src="assets/img/team/alison.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Alison Garner</h4>
+                <h4>Alison Maerker Garner</h4>
                 <span>Board Member</span>
+                <p id="alison-bio" class="text-overflow-clamp">
+                  Ms. Garner is a transformational coach for creatives, a professional violinist and pianist and 
+creator of the Musical Minds curriculum for children. Her training includes degrees in Violin 
+Performance at Indiana University where she studied with Josef Gingold, Music Education, 
+Inter-related Arts and Aesthetics Education, and Child Development. Ms. Garner has an 
+extensive background in dance and dance composition, studio art, and has published fourteen 
+Musical Minds books and ten peer-reviewed articles on promoting the psycho-emotional health 
+in both music teachers and musicians. As a performer, Ms. Garner soloed as a child on both 
+violin and piano playing in Carnegie Hall, Kennedy Center and throughout North and South 
+America. She later performed professionally in many orchestras and chamber ensembles, and 
+held solo recitals. As an educator, Ms. Garner teaches children and coaches teachers using the 
+Suzuki Method, Orff, Kodaly, Dalcroze-Eurhythmics and particularly, her Musical Minds 
+approach. As a transformational coach, Ms. Garner integrates somatic therapies with mind-body 
+practices, Interpersonal Neurobiology and Neuro-Linguistic Programming to serve those she 
+counsels. Her life-path involves nurturing and guiding teachers, healers, students, musicians, 
+dancers, artists, and those in the language arts into the mind-body integration necessary to reach 
+the full embodiment of their greatest potential.
+                </p>
+                <p><a id="alison-bio-btn" class="bio-btn">Read More</a></p>
               </div>
             </div>
           </div>
