Added tax id number to footer

--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
         <a href="https://instagram.com/transformanceart" target="_blank" class="instagram" aria-label="instagram"><i class="bx bxl-instagram" aria-hidden="true"></i></a>
         <a href="https://youtube.com/@TransformanceArt" target="_blank" class="youtube" aria-label="youtube"><i class="bx bxl-youtube" aria-hidden="true"></i></a>
       </div>
-        &copy; Copyright Transformance Art <script>document.write(new Date().getFullYear())</script>. All Rights Reserved. Transformance Art, Inc. is a 501(c)(3) nonprofit recognized by the IRS.
+        &copy; Copyright Transformance Art <script>document.write(new Date().getFullYear())</script>. All Rights Reserved. Transformance Art, Inc. is a 501(c)(3) nonprofit recognized by the IRS.<br>
+        Tax ID Number: 93-3777934
       </div>
       <div class="credits">
         Site designed and managed by <a href="https://cryptasian.com" target="_blank">Cryptasian</a>
