Add Natalie's bio

--- a/about.html
+++ b/about.html
@@ -161,9 +161,11 @@
               <div class="member-info">
                 <h4>Natalie Thompson</h4>
                 <span>Treasurer</span>
-                <p>
-                  Coming Soon
+                <p id="natalie-bio" class="text-overflow-clamp">
+                  Natalie brings technical expertise, nearly a decade of experience in education finance and customer service, and a versatile set of skills from her time with a blockchain consulting startup. Her abilities range from project management to web development, and she has a knack for quickly acquiring new technical skills to meet any challenge. She thrives on these challenges as they fuel her continuous growth.<br><br>
+                  Outside of her professional life, Natalie enjoys spending time with family and friends, dancing, playing video games, and traveling. She has a lifelong passion for the arts, having grown up dancing and playing piano and violin. This creative background adds a unique perspective to her technical roles, allowing her to approach problems with both practical and innovative solutions. 
                 </p>
+                <p><a id="natalie-bio-btn" class="bio-btn">Read More</a></p>
               </div>
             </div>
           </div>
