--- a/connect.html
+++ b/connect.html
@@ -21,7 +21,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Transformance Art | Connect</title>
-	<meta name="description" content="Empowering innovative arts initiatives that promote hope, healing, and restoration, both individually and collectively, through the transformative power of performance arts experiences.">  
+	<meta name="description" content="Get in touch with Transformance Art for general inquiries, partnership opportunities, or to get involved. Explore sponsorship options and connect with us to support and enhance our transformative art initiatives. Join our mission to inspire hope and healing through the arts.">  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
