--- a/suicide-awareness.html
+++ b/suicide-awareness.html
@@ -20,7 +20,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Transformance Art | Strength and Survival: Creative Expressions of Overcoming Suicide and Loss</title>
+  <title>Transformance Art | Suicide Awareness Meraki Project</title>
 	<meta name="description" content="Discover the healing power of music, dance, painting, and poetry. Our curated artistic experience features original works by transformance artists and local community contributors, offering hope and restoration for those navigating life's challenges.">  
 
   <!-- Google Fonts -->
